--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=hospital-app
+server.port=8082
+spring.datasource.url=jdbc:h2:mem:patients-db
+spring.h2.console.enabled=true
