--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=hospital-app
 server.port=8082
-spring.datasource.url=jdbc:h2:mem:patients-db
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://localhost:3306/patients-db?createDatabaseIfNotExist=True
+spring.datasource.username=root
+spring.datasource.password=Haddani@2024
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
